Style: solve some issues